[metadata]
name = graphene-django-extras
version = 0.4.9
author = "Ernesto Perez Amigo <eamigop86@gmail.com>"
homepage = https://github.com/eamigo86/graphene-django-extras
repository = https://github.com/eamigo86/graphene-django-extras
documentation = https://github.com/eamigo86/graphene-django-extras

[options]
zip_safe = false
include_package_data = true
packages = graphene_django_extras
setup_requires =
    setuptools
    # setuptools >=30.3.0     # minimal version for `setup.cfg`
    # setuptools >=38.3.0     # version with most `setup.cfg` bugfixes

